WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26420
Still seeing occasional leaks from UString::sharedBuffer code
https://bugs.webkit.org/show_bug.cgi?id=26420
Summary
Still seeing occasional leaks from UString::sharedBuffer code
Andrew Wilson
Reported
2009-06-15 15:14:02 PDT
I'm still seeing occasional leaks from the sharedBuffer code when running layout tests. They aren't reproducible 100%. I have a "leaktest" shell script I run to look for leaks in a loop: #!/bin/bash rm /tmp/layout-test-results/DumpRenderTree* until [ -e /tmp/layout-test-results/DumpRenderTree-leaks.txt ]; do WebKitTools/Scripts/run-webkit-tests --debug LayoutTests/fast/events/ --leaks done In my most recent test, it took about 40 iterations before it finally caught the attached leak (not sure why --leaks is non-deterministic). The backtrace (attached) is different every time, but it is always down in the UString::sharedBuffer code.
Attachments
sample backtrace for leaking allocation
(8.67 KB, text/plain)
2009-06-15 15:19 PDT
,
Andrew Wilson
no flags
Details
Proposed fix.
(2.28 KB, patch)
2009-06-29 16:16 PDT
,
David Levin
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2009-06-15 15:19:21 PDT
Created
attachment 31310
[details]
sample backtrace for leaking allocation
David Levin
Comment 2
2009-06-29 16:16:51 PDT
Created
attachment 32024
[details]
Proposed fix.
Oliver Hunt
Comment 3
2009-06-29 16:23:26 PDT
Comment on
attachment 32024
[details]
Proposed fix. r=me
David Levin
Comment 4
2009-06-29 17:10:50 PDT
Committed as
http://trac.webkit.org/changeset/45360
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug